fixed font and spacing issue

--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ body{
     padding: 50px;
     font-family: 'Pacifico', cursive;
     background: #dedede;
-    font-size: 20pt;
+    font-size: 15pt;
 }
 
 .items{
